--- a/client/src/views/create/create.styles.css
+++ b/client/src/views/create/create.styles.css
@@ -6,6 +6,14 @@
     background-color: rgb(91, 193, 91);
 }
 
+.icono-render {
+    opacity: 0;
+}
+
+.icono-inicio {
+    opacity: 1;
+}
+
 .form-container {
     background-color: blueviolet;
     display: flex;
@@ -24,7 +32,7 @@
     margin: 50px 50px;
 }
 
-.types {
+.types-div {
     /* background-color: blue;
     border: 1px solid black; */
     display: flex;
