--- a/client/src/components/card/card.styles.css
+++ b/client/src/components/card/card.styles.css
@@ -1,6 +1,7 @@
 .card-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: aquamarine;
     border: 1px solid black;
     border-radius: 6px;
@@ -14,4 +15,22 @@
 
 .card-container:hover {
     transform: scale(1.05);
+}
+
+.poke-image {
+    width: 150px;
+    height: 150px;
+    margin: 5px, 0;
+}
+
+.type-container {
+    display: flex;
+    flex-flow: row wrap;
+   align-content: center;
+}
+
+.type {
+    background-color: blue;
+    border: 1px solid red;
+    margin: 0 10px;
 }
