--- a/client/src/components/cards/cards.styles.css
+++ b/client/src/components/cards/cards.styles.css
@@ -1,7 +1,7 @@
 .cards-list {
     width: 85vw;
-    margin: 0 auto;
+    margin: 0;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
 }
